ini-persist/tests/compile-fail/unknown_attr.stderr
error: unknown ini attribute `bogus`
 --> tests/compile-fail/unknown_attr.rs:4:7
  |
4 | #[ini(bogus)]
  |       ^^^^^
